Related: tdf#151351 don't use stack/highlight bg for buttons

in favor of reworked flat button default rendering

Change-Id: Id1d4b773aa0bf91be0386bd9db3bb212d422f216
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140980
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>